JBTM-2564 IPv6 args for quickstarts