@@ -19,6 +19,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <narayana.version>5.2.9.Final-SNAPSHOT</narayana.version>
         <version.org.wildfly.arquillian>1.0.1.Final</version.org.wildfly.arquillian>
+        <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
+        <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
+        <jvm.args.debug></jvm.args.debug>
+        <jvm.args.other>-server</jvm.args.other>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
@@ -167,12 +171,10 @@
         </plugins>
     </build>
 
+
     <profiles>
         <profile>
-            <!-- This profile will start a new JBoss AS instance, and execute
-     the test, shutting it down when done -->
-            <!-- Run with: mvn clean test -->
-            <id>arq-jbossas-managed</id>
+            <id>arq</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -187,31 +189,31 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <skip>false</skip>
-                            <systemPropertyVariables>
-                                <!-- For arquillian -->
-                                <jbossHome>${env.JBOSS_HOME}</jbossHome>
+                            <systemPropertyVariables combine.children="append">
+                                <!--
+                                    Used in arquillian.xml
+                                -->
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
+                                <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
-
         <profile>
-
-            <!-- An optional Arquillian testing profile that executes tests
-      in a remote JBoss AS instance -->
-            <!-- Run with: mvn clean test -Parq-jbossas-remote -->
-            <id>arq-jbossas-remote</id>
+            <id>arqIPv6</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly.arquillian</groupId>
-                    <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${version.org.wildfly.arquillian}</version>
                     <scope>test</scope>
                 </dependency>
@@ -219,22 +221,22 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <skip>false</skip>
+                            <argLine>${ipv6.server.jvm.args}</argLine>
+                            <systemPropertyVariables combine.children="append">
+                                <!--
+                                    Used in arquillian.xml
+                                -->
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
+                                <node.address>[::1]</node.address>
+                            </systemPropertyVariables>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>ipv6</id>
-            <activation><property><name>ipv6</name></property></activation>
-            <properties>
-                <jvm.args.ip>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</jvm.args.ip>
-                <node0>::1</node0>
-            </properties>
         </profile>
     </profiles>
 </project>
